# My_Django_webapp

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
hub/: models.py  urls.py  views.py
hub/migrations/: 0001_initial.py
hub/static/: calculator.css
hub/templates/hub/: calculator.html  chat_with_gpt.html  home.html  login.html  register.html
